--- a/Dota_on_Rails/Gemfile
+++ b/Dota_on_Rails/Gemfile
@@ -6,7 +6,7 @@ gem 'rails', '4.2.1'
 gem 'thin'
 
 gem 'omniauth-steam'
-gem 'dota', path: 'F:\rails\my\dota', branch: 'modify_player'
+gem 'dota', github: 'bodrovis/dota', branch: 'new_items'
 
 gem 'bootstrap-sass'
 
