--- a/Dota_on_Rails/Gemfile
+++ b/Dota_on_Rails/Gemfile
@@ -6,7 +6,7 @@ gem 'rails', '4.2.1'
 gem 'thin'
 
 gem 'omniauth-steam'
-gem 'dota', '~> 0.0.18'
+gem 'dota', github: 'vinnicc/dota'
 
 gem 'bootstrap-sass'
 
