--- a/Auth_Provider_with_Opro/OproClient/Gemfile
+++ b/Auth_Provider_with_Opro/OproClient/Gemfile
@@ -13,9 +13,14 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
 
 gem 'rest-client'
+gem 'devise'
 
-gem 'better_errors'
-gem 'binding_of_caller'
+group :development do
+  gem 'better_errors'
+  gem 'binding_of_caller'
+  gem 'pry-rails'
+end
+
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
