--- a/Auth_Provider_with_Opro/OproServer/Gemfile
+++ b/Auth_Provider_with_Opro/OproServer/Gemfile
@@ -32,5 +32,7 @@ gem 'jquery-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 
+gem 'jbuilder'
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
