--- a/Auth_Provider_with_Doorkeeper/KeepaClient/Gemfile
+++ b/Auth_Provider_with_Doorkeeper/KeepaClient/Gemfile
@@ -9,6 +9,8 @@ group :development do
   gem 'pry-rails'
 end
 
+gem 'omniauth-oauth2', '1.3.1'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
