changes to chat

--- a/Chat_with_ActionCable_and_Devise/Gemfile
+++ b/Chat_with_ActionCable_and_Devise/Gemfile
@@ -16,7 +16,7 @@ gem 'bootstrap', '~> 4.0.0.alpha3'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
-gem 'turbolinks', '~> 5.x'
+gem 'turbolinks', '>= 5.0.0.beta2'
 
 gem 'redis', '~> 3.2'
 
