--- a/Custom_Messaging_System/Gemfile
+++ b/Custom_Messaging_System/Gemfile
@@ -30,7 +30,8 @@ gem 'jbuilder', '~> 2.5'
 # gem 'capistrano-rails', group: :development
 
 gem 'devise'
-gem 'emoji'
+gem 'gemoji'
+gem 'redis'
 
 group :development, :test do
   gem 'sqlite3'
