--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,8 +3,10 @@ pull_request_rules:
     conditions:
       - approved-reviews-by>=1
       - status-success=default
+      - status-success=Codacy/PR Quality Review
       - base=master
     actions:
       merge:
         method: squash
+        strict: true
       delete_head_branch: {}  
